@@ -7,6 +7,7 @@ Version 4.0.0 - DEV
  - Store recognized language extensions in database and query from
    submit client through REST API.
  - Update jscolor and sorttable javascript to latest upstream versions.
+ - Misc. minor bugs fixed reported by Coverity scan.
 
 Version 3.4.0 - (unreleased)
 ----------------------------
